Add Firebase dep

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ APP_ID=1:510134848954:web:1c7c1584001e7b2d692183
 MEASUREMENT_ID=G-4CZZCBN05L
 STORAGE_BUCKET=chore-tracker-8c396.appspot.com
 AUTH_DOMAIN=chore-tracker-8c396.firebaseapp.com
+
+PORT=3000
